--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "errors": {
+  "error": {
     "401": "FYTA API credentials are incorrect",
     "403": "FYTA API has denied access to this device",
     "404": "Device not found in FYTA account",
