--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,5 +1,5 @@
 {
-  "errors": {
+  "error": {
     "401": "Inloggegevens van de FYTA API zijn onjuist",
     "403": "FYTA API heeft de toegang tot dit apparaat geweigerd",
     "404": "Apparaat is niet gevonden in FYTA account",
